# R-Type

./: .clang-format  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  TODO.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client_build  client_build_windows.vcxproj  client_build_windows.vcxproj.filters  docker-compose.yml  engine_build_windows.sln  engine_build_windows.vcxproj  engine_build_windows.vcxproj.filters  makebuild.sh  raylib.cmake  server_build.vcxproj  server_build.vcxproj.filters  server_build_windows.vcxproj  server_build_windows.vcxproj.filters  vcpkg.json
.github/workflows/: build_windows.yml  clang_formator.yml  mirror_push.yml  run_test.yml
archive/client/: CMakeLists.txt
archive/engine/: CMakeLists.txt
archive/server/: CMakeLists.txt  CMakePresets.json  vcpkg.json
client/: CMakeLists.txt  client  main.cpp  rtype
client/include/: Client.hpp  Entity.hpp  ErrorHandling.hpp  Game.hpp  Infos.hpp  Network.hpp  System.hpp
client/src/: Client.cpp  Entity.cpp  ErrorHandling.cpp  Game.cpp  Interaction.cpp  Network.cpp  System.cpp  main.cpp
client/src/network/: Network.cpp  NetworkCommands.cpp  NetworkUtils.cpp
client_build_windows.dir/Debug/client_b.92AD8DDD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
cmake/: Findraylib.cmake
documentation/: Protocol.md  RFC-documentation.md
engine/: CMakeLists.txt  CMakelists.txt  main.cpp  vcpkg.json
engine/include/: Component.hpp  Engine.hpp  EngineEntity.hpp  EngineNetwork.hpp  EngineSystem.hpp  EngineUtils.hpp  Entity.hpp  Network.hpp  ResourcesManager.hpp  System.hpp  Utils.hpp
engine/include/Utils/: Vector2.hpp  Vector3.hpp
engine/src/: Component.cpp  Entity.cpp  Network.cpp  ResourcesManager.cpp  System.cpp  ecs.cpp  main.cpp
engine_build_windows.dir/Debug/engine_b.8378F147.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
server/: CMakeLists.txt  CMakelists.txt  Dockerfile  main.cpp  server  vcpkg.json
server/cmake/: Findraylib.cmake
server/include/: Entity.hpp  EntityS.hpp  ErrorHandling.hpp  Game.hpp  Network.hpp  Server.hpp  System.hpp  SystemS.hpp
server/src/: Client.cpp  Entity.cpp  ErrorHandling.cpp  Game.cpp  Network.cpp  Server.cpp  System.cpp  main.cpp
server_build.dir/Debug/server_build.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  server_build.lastbuildstate
server_build_windows.dir/Debug/server_b.E1498486.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog
tests/: CMakeLists.txt
tests/client/: exemple_test.cpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
